# iort_project

./: CMakeLists.txt  README.md  index.html  package-lock.json  package.xml
MQTTSensorNode/: MQTTSensorNode.ino
behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
config/: final.rviz  joystick.yaml  ldlidar.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  opennav_params.yaml  twist_mux.yaml
config/signals/: ir_back.txt  ir_forward.txt  ir_start_stop.txt
description/: lidar.xacro  robot_core.xacro  ros2_control.xacro
include/: coverage_planner.hpp
iort_web_interface/: index.html  main.js  package.json  server.js  styles.css
iort_web_interface/scripts/: main.js
launch/: ball_tracker.launch.py  coverage.launch.py  gazebo_launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_step_control.launch.py  ldlidar_bringup.launch.py  localization_launch.py  online_async_launch.py  opennav_bringup_launch copy.py  opennav_bringup_launch.py  real_robot.launch.py  real_robot_dev.launch.py  rsp.launch.py
maps/: complete_house_map_save.yaml  complete_house_map_serial.data  coverage_map.data  coverage_map.pgm  house_map_save.pgm  house_map_save.yaml  house_map_serial.data  my_map_save.pgm  my_map_save.yaml
msg/: CoverageMission.msg  CoveragePlan.msg  CoverageZone.msg
src/: coverage_nav2_node copy.cpp  coverage_nav2_node(new).cpp  coverage_nav2_node.cpp  debug_node.cpp  mqtt_ros2_bridge.cpp  real_step_controller_node.cpp  sim_step_controller_node.cpp  step_controller_node copy.cpp  step_controller_node.cpp  web_bridge_node.cpp
vacuumbot/: IRtransmitter.cpp  package.xml  plugin.xml
vacuumbot/config/: ldlidar.yaml  mapper_params_online_async.yaml  nav2_params(humble).yaml  opennav_params copy.yaml  opennav_params.yaml  slam_toolbox.yaml
vacuumbot/config/signals/: ir_left.txt  ir_right.txt
vacuumbot/description/: camera.xacro  robot_core.xacro
vacuumbot/launch/: coverage.launch.py  launch_step_control.launch(edit).py  launch_step_control.launch.py  ldlidar_slam.launch.py  navigation_launch.py  online_async_launch.py  opennav_bringup_launch.py
vacuumbot/maps/: complete_house_map_save.pgm  coverage_map.yaml  my_map_serial.data
vacuumbot/models/aws_robomaker_residential_RoomWall_01/meshes/: aws_RoomWall_01_collision.DAE
vacuumbot/src/: coverage_nav2_node.cpp  coverage_planner.cpp  mqtt_ros2_bridge.cpp  sim_step_controller_node.cpp
vacuumbot/worlds/: obstacles.sdf  small_house.sdf
web_interface/: main.js
worlds/: coverage.sdf  prova.sdf  prova2.sdf  prova3.sdf  small_house(copy).sdf  small_house.sdf
